istio/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: random-generator
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - random-generator-gateway
  http:
  - match:
    - uri:
        prefix: /blue
    rewrite:
      uri: /
    route:
    - destination:
        host: random-generator-green.green-deployment.svc.cluster.local
        port:
          number: 80
